finish updating stuff to mvvm toolkit

--- a/src/Tel.Egram/Tel.Egram.csproj
+++ b/src/Tel.Egram/Tel.Egram.csproj
@@ -1,316 +1,26 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
-   </PropertyGroup>
-  
+  </PropertyGroup>
+   
   <ItemGroup>
-    <ProjectReference Include="..\Tel.Egram.Application\Tel.Egram.Application.csproj" />
-    <ProjectReference Include="..\Tel.Egram.Model\Tel.Egram.Model.csproj" />
-    <ProjectReference Include="..\Tel.Egram.Services\Tel.Egram.Services.csproj" />
-  </ItemGroup>
-  
-  <ItemGroup> 
     <PackageReference Include="Avalonia" Version="11.0.0-preview3" />
-    <PackageReference Include="Avalonia.Desktop" Version="11.0.0-preview3" /> 
-    <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.0-preview3" />  
-    
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.3" /> 
+    <PackageReference Include="Avalonia.Desktop" Version="11.0.0-preview3" />
+    <PackageReference Include="Avalonia.Diagnostics" Version="11.0.0-preview3" />
+    <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.0-preview3" />
+    <PackageReference Include="Avalonia.Themes.Simple" Version="11.0.0-preview3" />
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0-preview1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.0" />
+     <PackageReference Include="SixLabors.ImageSharp" Version="2.1.3" />
+    <PackageReference Include="TDLib" Version="1.8.1.1" />
   </ItemGroup>
-  
+
   <ItemGroup>
-    <AvaloniaResource Include="Fonts\Roboto-Black.ttf" />
-    <AvaloniaResource Include="Fonts\Roboto-BlackItalic.ttf" />
-    <AvaloniaResource Include="Fonts\Roboto-Bold.ttf" />
-    <AvaloniaResource Include="Fonts\Roboto-BoldItalic.ttf" />
-    <AvaloniaResource Include="Fonts\Roboto-Italic.ttf" />
-    <AvaloniaResource Include="Fonts\Roboto-Light.ttf" />
-    <AvaloniaResource Include="Fonts\Roboto-LightItalic.ttf" />
-    <AvaloniaResource Include="Fonts\Roboto-Medium.ttf" />
-    <AvaloniaResource Include="Fonts\Roboto-MediumItalic.ttf" />
-    <AvaloniaResource Include="Fonts\Roboto-Regular.ttf" />
-    <AvaloniaResource Include="Fonts\Roboto-Thin.ttf" />
-    <AvaloniaResource Include="Fonts\Roboto-ThinItalic.ttf" />
-    <AvaloniaResource Include="Icons\Dark\Mic32.png" />
-    <AvaloniaResource Include="Icons\Dark\Trash32.png" />
-    <AvaloniaResource Include="Icons\Dark\X32.png" />
-    <AvaloniaResource Include="Icons\Light\Bot32.png" />
-    <AvaloniaResource Include="Icons\Light\Channel32.png" />
-    <AvaloniaResource Include="Icons\Light\File32.png" />
-    <AvaloniaResource Include="Icons\Light\Group32.png" />
-    <AvaloniaResource Include="Icons\Light\Home32.png" />
-    <AvaloniaResource Include="Icons\Light\Minus32.png" />
-    <AvaloniaResource Include="Icons\Light\More32.png" />
-    <AvaloniaResource Include="Icons\Light\Person32.png" />
-    <AvaloniaResource Include="Icons\Light\Plus32.png" />
-    <AvaloniaResource Include="Icons\Light\Settings32.png" />
-    <AvaloniaResource Include="Images\DR.png" />
-    <AvaloniaResource Include="Images\Flags\AD.png" />
-    <AvaloniaResource Include="Images\Flags\AE.png" />
-    <AvaloniaResource Include="Images\Flags\AF.png" />
-    <AvaloniaResource Include="Images\Flags\AG.png" />
-    <AvaloniaResource Include="Images\Flags\AI.png" />
-    <AvaloniaResource Include="Images\Flags\AL.png" />
-    <AvaloniaResource Include="Images\Flags\AM.png" />
-    <AvaloniaResource Include="Images\Flags\AN.png" />
-    <AvaloniaResource Include="Images\Flags\AO.png" />
-    <AvaloniaResource Include="Images\Flags\AQ.png" />
-    <AvaloniaResource Include="Images\Flags\AR.png" />
-    <AvaloniaResource Include="Images\Flags\AS.png" />
-    <AvaloniaResource Include="Images\Flags\AT.png" />
-    <AvaloniaResource Include="Images\Flags\AU.png" />
-    <AvaloniaResource Include="Images\Flags\AW.png" />
-    <AvaloniaResource Include="Images\Flags\AX.png" />
-    <AvaloniaResource Include="Images\Flags\AZ.png" />
-    <AvaloniaResource Include="Images\Flags\BA.png" />
-    <AvaloniaResource Include="Images\Flags\BB.png" />
-    <AvaloniaResource Include="Images\Flags\BD.png" />
-    <AvaloniaResource Include="Images\Flags\BE.png" />
-    <AvaloniaResource Include="Images\Flags\BF.png" />
-    <AvaloniaResource Include="Images\Flags\BG.png" />
-    <AvaloniaResource Include="Images\Flags\BH.png" />
-    <AvaloniaResource Include="Images\Flags\BI.png" />
-    <AvaloniaResource Include="Images\Flags\BJ.png" />
-    <AvaloniaResource Include="Images\Flags\BL.png" />
-    <AvaloniaResource Include="Images\Flags\BM.png" />
-    <AvaloniaResource Include="Images\Flags\BN.png" />
-    <AvaloniaResource Include="Images\Flags\BO.png" />
-    <AvaloniaResource Include="Images\Flags\BR.png" />
-    <AvaloniaResource Include="Images\Flags\BS.png" />
-    <AvaloniaResource Include="Images\Flags\BT.png" />
-    <AvaloniaResource Include="Images\Flags\BW.png" />
-    <AvaloniaResource Include="Images\Flags\BY.png" />
-    <AvaloniaResource Include="Images\Flags\BZ.png" />
-    <AvaloniaResource Include="Images\Flags\CA.png" />
-    <AvaloniaResource Include="Images\Flags\CC.png" />
-    <AvaloniaResource Include="Images\Flags\CD.png" />
-    <AvaloniaResource Include="Images\Flags\CF.png" />
-    <AvaloniaResource Include="Images\Flags\CG.png" />
-    <AvaloniaResource Include="Images\Flags\CH.png" />
-    <AvaloniaResource Include="Images\Flags\CI.png" />
-    <AvaloniaResource Include="Images\Flags\CK.png" />
-    <AvaloniaResource Include="Images\Flags\CL.png" />
-    <AvaloniaResource Include="Images\Flags\CM.png" />
-    <AvaloniaResource Include="Images\Flags\CN.png" />
-    <AvaloniaResource Include="Images\Flags\CO.png" />
-    <AvaloniaResource Include="Images\Flags\CR.png" />
-    <AvaloniaResource Include="Images\Flags\CT.png" />
-    <AvaloniaResource Include="Images\Flags\CU.png" />
-    <AvaloniaResource Include="Images\Flags\CV.png" />
-    <AvaloniaResource Include="Images\Flags\CW.png" />
-    <AvaloniaResource Include="Images\Flags\CX.png" />
-    <AvaloniaResource Include="Images\Flags\CY.png" />
-    <AvaloniaResource Include="Images\Flags\CZ.png" />
-    <AvaloniaResource Include="Images\Flags\DE.png" />
-    <AvaloniaResource Include="Images\Flags\DJ.png" />
-    <AvaloniaResource Include="Images\Flags\DK.png" />
-    <AvaloniaResource Include="Images\Flags\DM.png" />
-    <AvaloniaResource Include="Images\Flags\DO.png" />
-    <AvaloniaResource Include="Images\Flags\DZ.png" />
-    <AvaloniaResource Include="Images\Flags\EC.png" />
-    <AvaloniaResource Include="Images\Flags\EE.png" />
-    <AvaloniaResource Include="Images\Flags\EG.png" />
-    <AvaloniaResource Include="Images\Flags\EH.png" />
-    <AvaloniaResource Include="Images\Flags\ER.png" />
-    <AvaloniaResource Include="Images\Flags\ES.png" />
-    <AvaloniaResource Include="Images\Flags\ET.png" />
-    <AvaloniaResource Include="Images\Flags\EU.png" />
-    <AvaloniaResource Include="Images\Flags\FI.png" />
-    <AvaloniaResource Include="Images\Flags\FJ.png" />
-    <AvaloniaResource Include="Images\Flags\FK.png" />
-    <AvaloniaResource Include="Images\Flags\FM.png" />
-    <AvaloniaResource Include="Images\Flags\FO.png" />
-    <AvaloniaResource Include="Images\Flags\FR.png" />
-    <AvaloniaResource Include="Images\Flags\GA.png" />
-    <AvaloniaResource Include="Images\Flags\GB.png" />
-    <AvaloniaResource Include="Images\Flags\GD.png" />
-    <AvaloniaResource Include="Images\Flags\GE.png" />
-    <AvaloniaResource Include="Images\Flags\GG.png" />
-    <AvaloniaResource Include="Images\Flags\GH.png" />
-    <AvaloniaResource Include="Images\Flags\GI.png" />
-    <AvaloniaResource Include="Images\Flags\GL.png" />
-    <AvaloniaResource Include="Images\Flags\GM.png" />
-    <AvaloniaResource Include="Images\Flags\GN.png" />
-    <AvaloniaResource Include="Images\Flags\GQ.png" />
-    <AvaloniaResource Include="Images\Flags\GR.png" />
-    <AvaloniaResource Include="Images\Flags\GS.png" />
-    <AvaloniaResource Include="Images\Flags\GT.png" />
-    <AvaloniaResource Include="Images\Flags\GU.png" />
-    <AvaloniaResource Include="Images\Flags\GW.png" />
-    <AvaloniaResource Include="Images\Flags\GY.png" />
-    <AvaloniaResource Include="Images\Flags\HK.png" />
-    <AvaloniaResource Include="Images\Flags\HN.png" />
-    <AvaloniaResource Include="Images\Flags\HR.png" />
-    <AvaloniaResource Include="Images\Flags\HT.png" />
-    <AvaloniaResource Include="Images\Flags\HU.png" />
-    <AvaloniaResource Include="Images\Flags\IC.png" />
-    <AvaloniaResource Include="Images\Flags\ID.png" />
-    <AvaloniaResource Include="Images\Flags\IE.png" />
-    <AvaloniaResource Include="Images\Flags\IL.png" />
-    <AvaloniaResource Include="Images\Flags\IM.png" />
-    <AvaloniaResource Include="Images\Flags\IN.png" />
-    <AvaloniaResource Include="Images\Flags\IQ.png" />
-    <AvaloniaResource Include="Images\Flags\IR.png" />
-    <AvaloniaResource Include="Images\Flags\IS.png" />
-    <AvaloniaResource Include="Images\Flags\IT.png" />
-    <AvaloniaResource Include="Images\Flags\JE.png" />
-    <AvaloniaResource Include="Images\Flags\JM.png" />
-    <AvaloniaResource Include="Images\Flags\JO.png" />
-    <AvaloniaResource Include="Images\Flags\JP.png" />
-    <AvaloniaResource Include="Images\Flags\KE.png" />
-    <AvaloniaResource Include="Images\Flags\KG.png" />
-    <AvaloniaResource Include="Images\Flags\KH.png" />
-    <AvaloniaResource Include="Images\Flags\KI.png" />
-    <AvaloniaResource Include="Images\Flags\KM.png" />
-    <AvaloniaResource Include="Images\Flags\KN.png" />
-    <AvaloniaResource Include="Images\Flags\KP.png" />
-    <AvaloniaResource Include="Images\Flags\KR.png" />
-    <AvaloniaResource Include="Images\Flags\KW.png" />
-    <AvaloniaResource Include="Images\Flags\KY.png" />
-    <AvaloniaResource Include="Images\Flags\KZ.png" />
-    <AvaloniaResource Include="Images\Flags\LA.png" />
-    <AvaloniaResource Include="Images\Flags\LB.png" />
-    <AvaloniaResource Include="Images\Flags\LC.png" />
-    <AvaloniaResource Include="Images\Flags\LI.png" />
-    <AvaloniaResource Include="Images\Flags\LK.png" />
-    <AvaloniaResource Include="Images\Flags\LR.png" />
-    <AvaloniaResource Include="Images\Flags\LS.png" />
-    <AvaloniaResource Include="Images\Flags\LT.png" />
-    <AvaloniaResource Include="Images\Flags\LU.png" />
-    <AvaloniaResource Include="Images\Flags\LV.png" />
-    <AvaloniaResource Include="Images\Flags\LY.png" />
-    <AvaloniaResource Include="Images\Flags\MA.png" />
-    <AvaloniaResource Include="Images\Flags\MC.png" />
-    <AvaloniaResource Include="Images\Flags\MD.png" />
-    <AvaloniaResource Include="Images\Flags\ME.png" />
-    <AvaloniaResource Include="Images\Flags\MF.png" />
-    <AvaloniaResource Include="Images\Flags\MG.png" />
-    <AvaloniaResource Include="Images\Flags\MH.png" />
-    <AvaloniaResource Include="Images\Flags\MK.png" />
-    <AvaloniaResource Include="Images\Flags\ML.png" />
-    <AvaloniaResource Include="Images\Flags\MM.png" />
-    <AvaloniaResource Include="Images\Flags\MN.png" />
-    <AvaloniaResource Include="Images\Flags\MO.png" />
-    <AvaloniaResource Include="Images\Flags\MP.png" />
-    <AvaloniaResource Include="Images\Flags\MQ.png" />
-    <AvaloniaResource Include="Images\Flags\MR.png" />
-    <AvaloniaResource Include="Images\Flags\MS.png" />
-    <AvaloniaResource Include="Images\Flags\MT.png" />
-    <AvaloniaResource Include="Images\Flags\MU.png" />
-    <AvaloniaResource Include="Images\Flags\MV.png" />
-    <AvaloniaResource Include="Images\Flags\MW.png" />
-    <AvaloniaResource Include="Images\Flags\MX.png" />
-    <AvaloniaResource Include="Images\Flags\MY.png" />
-    <AvaloniaResource Include="Images\Flags\MZ.png" />
-    <AvaloniaResource Include="Images\Flags\NA.png" />
-    <AvaloniaResource Include="Images\Flags\NC.png" />
-    <AvaloniaResource Include="Images\Flags\NE.png" />
-    <AvaloniaResource Include="Images\Flags\NF.png" />
-    <AvaloniaResource Include="Images\Flags\NG.png" />
-    <AvaloniaResource Include="Images\Flags\NI.png" />
-    <AvaloniaResource Include="Images\Flags\NL.png" />
-    <AvaloniaResource Include="Images\Flags\NO.png" />
-    <AvaloniaResource Include="Images\Flags\NP.png" />
-    <AvaloniaResource Include="Images\Flags\NR.png" />
-    <AvaloniaResource Include="Images\Flags\NU.png" />
-    <AvaloniaResource Include="Images\Flags\NZ.png" />
-    <AvaloniaResource Include="Images\Flags\OM.png" />
-    <AvaloniaResource Include="Images\Flags\PA.png" />
-    <AvaloniaResource Include="Images\Flags\PE.png" />
-    <AvaloniaResource Include="Images\Flags\PF.png" />
-    <AvaloniaResource Include="Images\Flags\PG.png" />
-    <AvaloniaResource Include="Images\Flags\PH.png" />
-    <AvaloniaResource Include="Images\Flags\PK.png" />
-    <AvaloniaResource Include="Images\Flags\PL.png" />
-    <AvaloniaResource Include="Images\Flags\PN.png" />
-    <AvaloniaResource Include="Images\Flags\PR.png" />
-    <AvaloniaResource Include="Images\Flags\PS.png" />
-    <AvaloniaResource Include="Images\Flags\PT.png" />
-    <AvaloniaResource Include="Images\Flags\PW.png" />
-    <AvaloniaResource Include="Images\Flags\PY.png" />
-    <AvaloniaResource Include="Images\Flags\QA.png" />
-    <AvaloniaResource Include="Images\Flags\RE.png" />
-    <AvaloniaResource Include="Images\Flags\RO.png" />
-    <AvaloniaResource Include="Images\Flags\RS.png" />
-    <AvaloniaResource Include="Images\Flags\RU.png" />
-    <AvaloniaResource Include="Images\Flags\RW.png" />
-    <AvaloniaResource Include="Images\Flags\SA.png" />
-    <AvaloniaResource Include="Images\Flags\SB.png" />
-    <AvaloniaResource Include="Images\Flags\SC.png" />
-    <AvaloniaResource Include="Images\Flags\SD.png" />
-    <AvaloniaResource Include="Images\Flags\SE.png" />
-    <AvaloniaResource Include="Images\Flags\SG.png" />
-    <AvaloniaResource Include="Images\Flags\SH.png" />
-    <AvaloniaResource Include="Images\Flags\SI.png" />
-    <AvaloniaResource Include="Images\Flags\SK.png" />
-    <AvaloniaResource Include="Images\Flags\SL.png" />
-    <AvaloniaResource Include="Images\Flags\SM.png" />
-    <AvaloniaResource Include="Images\Flags\SN.png" />
-    <AvaloniaResource Include="Images\Flags\SO.png" />
-    <AvaloniaResource Include="Images\Flags\SR.png" />
-    <AvaloniaResource Include="Images\Flags\SS.png" />
-    <AvaloniaResource Include="Images\Flags\ST.png" />
-    <AvaloniaResource Include="Images\Flags\SV.png" />
-    <AvaloniaResource Include="Images\Flags\SX.png" />
-    <AvaloniaResource Include="Images\Flags\SY.png" />
-    <AvaloniaResource Include="Images\Flags\SZ.png" />
-    <AvaloniaResource Include="Images\Flags\TC.png" />
-    <AvaloniaResource Include="Images\Flags\TD.png" />
-    <AvaloniaResource Include="Images\Flags\TF.png" />
-    <AvaloniaResource Include="Images\Flags\TG.png" />
-    <AvaloniaResource Include="Images\Flags\TH.png" />
-    <AvaloniaResource Include="Images\Flags\TJ.png" />
-    <AvaloniaResource Include="Images\Flags\TK.png" />
-    <AvaloniaResource Include="Images\Flags\TL.png" />
-    <AvaloniaResource Include="Images\Flags\TM.png" />
-    <AvaloniaResource Include="Images\Flags\TN.png" />
-    <AvaloniaResource Include="Images\Flags\TO.png" />
-    <AvaloniaResource Include="Images\Flags\TR.png" />
-    <AvaloniaResource Include="Images\Flags\TT.png" />
-    <AvaloniaResource Include="Images\Flags\TV.png" />
-    <AvaloniaResource Include="Images\Flags\TW.png" />
-    <AvaloniaResource Include="Images\Flags\TZ.png" />
-    <AvaloniaResource Include="Images\Flags\UA.png" />
-    <AvaloniaResource Include="Images\Flags\UG.png" />
-    <AvaloniaResource Include="Images\Flags\US.png" />
-    <AvaloniaResource Include="Images\Flags\UY.png" />
-    <AvaloniaResource Include="Images\Flags\UZ.png" />
-    <AvaloniaResource Include="Images\Flags\VA.png" />
-    <AvaloniaResource Include="Images\Flags\VC.png" />
-    <AvaloniaResource Include="Images\Flags\VE.png" />
-    <AvaloniaResource Include="Images\Flags\VG.png" />
-    <AvaloniaResource Include="Images\Flags\VI.png" />
-    <AvaloniaResource Include="Images\Flags\VN.png" />
-    <AvaloniaResource Include="Images\Flags\VU.png" />
-    <AvaloniaResource Include="Images\Flags\WF.png" />
-    <AvaloniaResource Include="Images\Flags\WS.png" />
-    <AvaloniaResource Include="Images\Flags\YE.png" />
-    <AvaloniaResource Include="Images\Flags\YT.png" />
-    <AvaloniaResource Include="Images\Flags\ZA.png" />
-    <AvaloniaResource Include="Images\Flags\ZM.png" />
-    <AvaloniaResource Include="Images\Flags\ZW.png" />
-    <AvaloniaResource Include="Images\Flags\_abkhazia.png" />
-    <AvaloniaResource Include="Images\Flags\_basque-country.png" />
-    <AvaloniaResource Include="Images\Flags\_british-antarctic-territory.png" />
-    <AvaloniaResource Include="Images\Flags\_commonwealth.png" />
-    <AvaloniaResource Include="Images\Flags\_england.png" />
-    <AvaloniaResource Include="Images\Flags\_gosquared.png" />
-    <AvaloniaResource Include="Images\Flags\_kosovo.png" />
-    <AvaloniaResource Include="Images\Flags\_mars.png" />
-    <AvaloniaResource Include="Images\Flags\_nagorno-karabakh.png" />
-    <AvaloniaResource Include="Images\Flags\_nato.png" />
-    <AvaloniaResource Include="Images\Flags\_northern-cyprus.png" />
-    <AvaloniaResource Include="Images\Flags\_olympics.png" />
-    <AvaloniaResource Include="Images\Flags\_red-cross.png" />
-    <AvaloniaResource Include="Images\Flags\_scotland.png" />
-    <AvaloniaResource Include="Images\Flags\_somaliland.png" />
-    <AvaloniaResource Include="Images\Flags\_south-ossetia.png" />
-    <AvaloniaResource Include="Images\Flags\_united-nations.png" />
-    <AvaloniaResource Include="Images\Flags\_unknown.png" />
-    <AvaloniaResource Include="Images\Flags\_wales.png" />
-    <AvaloniaResource Include="Resources\PhoneCodes.txt" />
+    <AvaloniaResource Include="**\*.ttf" />
+    <AvaloniaResource Include="**\*.png" />
+    <AvaloniaResource Include="**\*.txt" />
   </ItemGroup>
-  
+
 </Project>
